--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <ul>
   <li><a href="#audience" style="text-decoration:none;color:black;">Audience</a></li>
-  <li><a href="#grading" style="text-decoration:none;color:black;">Grading</a></li>
+  <li><a href="#grading" style="text-decoration:none;color:black;">Resources & Requirements</a></li>
   <li><a href="#office-hours" style="text-decoration:none;color:black;">Office Hours</a></li>  
   <li><a href="#tools" style="text-decoration:none;color:black;">Tools</a></li>
   <li><a href="#policies" style="text-decoration:none;color:black;">Policies</a></li>
@@ -55,7 +55,7 @@
 </ol>
 <p>Students will learn how to implement data science systems according to best practices, with an emphasis upon creating reusable and portable environments.</p>
 
-<h2><a id="grading" class="anchor" href="#grading" name="grading" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Grading</h2>
+<h2><a id="grading" class="anchor" href="#grading" name="grading" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Resources & Requirements</h2>
 <table>
   <thead>
     <tr>
@@ -66,34 +66,29 @@
   </thead>
   <tbody>
     <tr>
-      <td><a href="https://l.uvarc.io/ds2002-survey" target="_new">Student Survey</a></td>
+      <td><a href="https://virginia.az1.qualtrics.com/jfe/form/SV_2o9g4mLR8vBBuNU" target="_new">Student Survey</a> & other setup</td>
       <td></td>
       <td>First week of class</td>
     </tr>
     <tr>
       <td>Lectures, readings and other material</td>
       <td></td>
-      <td>Weekly before class discussion</td>
+      <td>Weekly before class</td>
     </tr>
     <tr>
-      <td><a href="labs/">Labs</a></td>
-      <td>30%</td>
-      <td>Select 10 through the semester / 3 points each</td>
-    </tr>
-    <tr>
-      <td>Discussions</td>
-      <td></td>
-      <td>Every THURSDAY 11:00am-12:00pm EDT</td>
+      <td><a href="https://canvas.its.virginia.edu/courses/105117/assignments" target="_new">Labs</a></td>
+      <td>Ungraded</td>
+      <td>Complete all required.</td>
     </tr>
     <tr>
       <td>Quizzes</td>
-      <td>20%</td>
-      <td>4 quizzes / 5 points each</td>
+      <td>40%</td>
+      <td>5 quizzes / 8 points each</td>
     </tr>
     <tr>
       <td>Data Projects</td>
-      <td>50%</td>
-      <td>2 projects / 25 points each</td>
+      <td>60%</td>
+      <td>3 projects / 20 points each</td>
     </tr>
   </tbody>
 </table>
@@ -101,10 +96,9 @@
 <ul>
   <li><b>Student Survey</b> - a simple questionnaire for me to ascertain baseline skills for the class and students' familiarity with a variety of tools and concepts.
   <li><b>Lectures / Reading / Viewing</b> - Will be posted beforehand. Though not a graded portion of the course, lectures, readings and supporting videos have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Lectures and all links will remain posted for the entire semester.
-  <li><b>Labs</b> - are an important way for you to interact with tools and cloud services. In most cases these will be in Amazon Web Services or Google Cloud Platform. Labs will either be hosted in Qwiklabs (and incur no charges in your own AWS account) or are designed to cost very little if performed in your account (a couple of dollars at most). Students are encouraged to complete as many labs as possible in order to gain competency in the subject matter. Students are required to complete at least 10 labs for credit.
-  <li><b>Discussions</b> - are the only synchronous element of this course, and will be held weekly on Thursdays at 11am Eastern Time. Please join the discord channel and bring your questions! Discussion may be accompanied by live Zoom.
+  <li><b>Labs</b> - are an important way for you to interact with tools and course concepts. In most cases these will be in Amazon Web Services or on your local workstation. Labs will either be hosted in AWS Academy (and incur no charges) or are designed to cost very little if you prefer to use your own AWS account (a couple of dollars at most). Students are encouraged to complete as many labs as possible in order to gain competency in the subject matter. There will be ten (10) required labs for the course; optional labs will also be available.
   <li><b>Quizzes</b> -  will be short, multiple-choice assessments of your understanding of the material. These will generally be given periodically during the semester.
-  <li><b>Data Projects</b> - are graded assignments that implement your understanding of course material. PAs will be posted one week before due. There is no time limit on PAs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
+  <li><b>Data Projects</b> - are graded assignments that implement your understanding of course material. DPs will be posted at least one week before due. There is no time limit on DPs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
 </ul>
 
 <h3>Grading Scale</h3>
