--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div style="min-height:2rem;"></div>
 
         <ul>
-          <li><a href="https://nmagee.github.io/ds2002/">Return to the<strong>Syllabus</strong></a></li>
+          <li><a href="https://nmagee.github.io/ds2002/schedule/">View the<strong>Schedule</strong></a></li>
           <li><a href="https://canvas.its.virginia.edu/courses/105117" target="_new">Course LMS<strong>Canvas</strong></a></li>
           <li><a href="https://github.com/nmagee/ds2002/" target="_new">Course Code<strong>GitHub</strong></a></li>
         </ul>
