--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     </tr>
     <tr>
       <td><a href="https://canvas.its.virginia.edu/courses/105117/assignments" target="_new">Labs</a></td>
-      <td>Ungraded</td>
-      <td>Complete all required.</td>
+      <td>10%</td>
+      <td>Complete all required labs.</td>
     </tr>
     <tr>
       <td>Quizzes</td>
@@ -87,8 +87,8 @@
     </tr>
     <tr>
       <td>Data Projects</td>
-      <td>60%</td>
-      <td>3 projects / 20 points each</td>
+      <td>50%</td>
+      <td>3 projects / ~17 points each</td>
     </tr>
   </tbody>
 </table>
