--- a/index.html
+++ b/index.html
@@ -114,12 +114,8 @@
   </thead>
   <tbody>
     <tr>
-      <td>A+</td>
-      <td>98-100</td>
-    </tr>
-    <tr>
       <td>A</td>
-      <td>94-97</td>
+      <td>94-100</td>
     </tr>
     <tr>
       <td>A-</td>
@@ -137,6 +133,10 @@
       <td>B-</td>
       <td>80-83</td>
     </tr>
+    <tr>
+      <td>C+</td>
+      <td>77-79</td>
+    </tr>
   </tbody>
 </table>
 </div><div style="margin-left:4rem;padding-left:4rem;">
@@ -148,10 +148,6 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>C+</td>
-      <td>77-79</td>
-    </tr>
     <tr>
       <td>C</td>
       <td>74-76</td>
@@ -182,33 +178,7 @@
 
 <h2>
   <a id="office-hours" name="office-hours" class="anchor" href="#office-hours" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Office Hours</h2>
-  <p>Given that this course is entirely online and most interactions will occur within the course Discord server, no formal office hours will be scheduled. Post your questions to the <code>#questions</code> channel, or message the instructor or TA directly. We will do our best to reply to all questions within a few hours. </p>
-
-<h2>
-<a id="tools" name="tools" class="anchor" href="#tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools</h2>
-<p>Students in this course will be expected to use the following pieces of software on a weekly basis:</p>
-<ul>
-  <li><strong><a href="">YouTube</a></strong> - This will be our primary platform for recorded lectures and the video portion for some real-time discussions.</li>
-  <li><strong><a href="https://l.uvarc.io/ds2002-discord" target="_new">Discord</a></strong> - Discord will serve as our hub for discussions, Q&A, and distributing extra material specific to topics or assignments. Download the software, create a Discord account, and <strong><a href="">join the class server</a></strong>.</li>
-  <li><strong><a href="https://github.com/" target="_new">Git/GitHub</a></strong> - Students are expected to know how to version control their material using Git. Some programming assignments will require submission via commits pushed to GitHub. Need a <a href="https://katacoda.com/courses/git" target="_new">tutorial</a>? If you do not have a GitHub account, create one now. Also, sign up for the <b><a href="https://education.github.com/students" target="_new">GitHub Education Student Developer Pack</a></b></li>
-  <li><strong><a href="https://nmagee.github.io/ds2002/aws/">Amazon Web Services</a></strong> - All students will use AWS accounts and credits for this course. Please click the link to learn more about the AWS Educate program and your options for creating an account.  </li>
-  <li><strong><a href="">Google Cloud Platform</a></strong> - Students will also work with GCP to broaden their hands-on experience. Google has donated $50 credit to each student for work in their environment.
-  <li><strong><a href="https://www.qwiklabs.com/" target="_new">Qwiklabs</a></strong> - Provides hands-on labs in AWS & GCP cloud services. Many of these are free and include detailed steps to complete practice projects of varying complexity. This course will provide free credits for labs requiring them.
-  <li><strong><a href="">Terms</a></strong> - An etherpad list of terms and concepts touched on. This page will change over the course of the semester and be a good resource for exam review. Students can edit this page!</li>
-</ul>
-
-<h3>Student Action Items</h3>
-<div class="action-items" style="margin-left:4rem;">
-<p>
-  <input type="checkbox" id="aws_acc" name="aws_acc" value="y"> Create an AWS account <br />
-  <input type="checkbox" id="aws_edu" name="aws_edu" value="y"> Join AWS Educate / request credits <br />
-  <input type="checkbox" id="gcp_acc" name="gcp_acc" value="y"> Create a GCP account <br />
-  <input type="checkbox" id="git_acc" name="git_acc" value="y"> Create a free GitHub account <br />
-  <input type="checkbox" id="git_sfw" name="git_sfw" value="y"> Install <code>git</code> locally <br />
-  <input type="checkbox" id="dis_acc" name="dis_acc" value="y"> Create a free Discord account / join server <br />
-  <input type="checkbox" id="qwi_acc" name="qwi_acc" value="y"> Create a free Qwiklabs account / requets credits <br />
-</p>
-</div>
+  <p>Will be held weekly. Time and location TBD.</p>
 
 <hr size=1 />
 <h2><a id="policies" href="#policies" class="anchor" name="policies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Policies</h2>
