--- a/index.html
+++ b/index.html
@@ -209,12 +209,10 @@
 
 <h2><a id="other" class="anchor" href="#other" name="other" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other Details</h2>
 <ul>
-  <li>Students are expected to complete every reading and watch every lecture. Failure to do so will undoubtedly leave gaps in your understanding of the subject, and the specifics required for assignments and exams.</li>
+  <li>Students are expected to complete every reading, complete all assignments, and attend every lecture. Failure to do so will undoubtedly leave gaps in your understanding of the subject, and the specifics required for assignments and exams.</li>
   <li>You should never wait until the last minute to work on any aspect of this class. Computers and software can crash, and websites can have temporary outages. Keep close to the class schedule for readings, lectures, and assignments.</li>
+  <li>This syllabus is subject to modification.</li>
 </ul>
-
-<h2><a id="contact" class="anchor" href="#contact" name="contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h2>
-<p>If you have a question about any aspect of this course - a particular topic, method, concept, etc. - please contact the TAs or me via Discord or email. It is often the case that you're not the only one having trouble understanding it!</p>
 
 </section>
 
