--- a/schedule/index.html
+++ b/schedule/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>DS2002 Data Science Systems - Schedule</title>
+    <title>DS2002 Data Science Systems I - Schedule</title>
     <link rel="stylesheet" href="https://nmagee.github.io/ds2002/stylesheets/styles.css">
     <link rel="stylesheet" href="https://nmagee.github.io/ds2002/stylesheets/github-light.css">
     <link rel="Shortcut Icon" href="https://www.rc.virginia.edu/images/favicon.ico" type="image/x-icon" />
@@ -38,7 +38,7 @@
   <thead>
     <tr>
       <th>#</th>
-      <th style="width:15%;">Date</th>
+      <th style="width:15%;">Week</th>
       <th>Topics(s)</th>
       <th style="width:35%;">Read / Watch / Recommended Labs</th>
     </tr>
@@ -49,81 +49,49 @@
       <td> </td>
       <td>Student Survey</td>
       <td>
-        <a href="https://l.uvarc.io/ds2002-survey" target="_new"><img src="../images/writing.png" /> <b>Take the Survey</b></a> <br />
-        <img src="../images/check.png" /> <a href="../labs/cost-control.html" target="_new">Setup: AWS Account / Budgets</a> <br />
-        <img src="../images/check.png" /> <a href="https://www.youtube.com/watch?v=-UNmEC9OmR8&list=PLxBq1F-c5mHoxRNeguX7EUeYNrpMpm9p-" target="_new">Setup: AWS Keys / CLI</a> <br />
+        <a href="https://virginia.az1.qualtrics.com/jfe/form/SV_2o9g4mLR8vBBuNU" target="_new"><img src="../images/writing.png" /> <b>Take the Survey</b></a> <br />
       </td>
     </tr>
     <tr>
       <td>01</td>
-      <td>2/1/2024</td>
+      <td>01/18/2024</td>
       <td>Course introduction: Data Engineering Basics</td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
-        <!-- <img src="../images/book.png" /> <a href="https://www.xplenty.com/blog/data-engineering-what-does-a-data-engineer-do-how-do-i-become-one/" target="_new">What is Data Engineering?</a> <br /> -->
-        <img src="../images/book.png" /> <a href="https://medium.com/@rchang/a-beginners-guide-to-data-engineering-part-i-4227c5c457d7" target="_new">Data Engineering - Parts I/II/III</a> <br />
       </td>
     </tr>
     <tr>
       <td>02</td>
-      <td>2/8/2024</td>
+      <td>01/23/2024</td>
       <td>Data: Storage & Management</td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=8I0GAGJEx4c" target="_new">A Brief History of UNIX</a> <br />
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=LeCJaTfEnEw" target="_new">Data Lakes & Analytics</a> <br />
-        <img src="../images/book.png" /> <a href="../assets/modern-cloud-data-platform.pdf" target="_new">Cloud Data Platforms</a> <br />
-        <img src="../images/book.png" /> <a href="../assets/data-science-data-management.pdf" target="_new">Data Management</a> <br />
-        <img src="../images/check.png" /> <a href="https://www.kaggle.com/nealmagee/parsing-json" target="_new">Python3 + JSON</a> <br />
-        <img src="../images/check.png" /> <a href="https://www.kaggle.com/mpwolke/kaggle-notebook" target="_new">Python3 + CSV</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15683?catalog_rank=%7B%22rank%22%3A2%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8743639" target="_new">Amazon S3</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/1760?catalog_rank=%7B%22rank%22%3A6%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8743655" target="_new">Google Storage</a> <br />
       </td>
     </tr>
     <tr>
       <td>03</td>
-      <td>2/15/2024</td>
+      <td>01/30/2024</td>
       <td>Data: Scripting, Pipelines, and Automation</td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=C6Abv87D5dU" target="_new">Data Pipeline Frameworks</a> <br />
-        <img src="../images/book.png" /> <a href="https://towardsdatascience.com/scalable-efficient-big-data-analytics-machine-learning-pipeline-architecture-on-cloud-4d59efc092b5" target="_new">Pipeline Architectures</a><br />
-        <img src="../images/check.png" /> <a href="https://github.com/ds2002/course/tree/main/practice/05-scripts" target="_new">Bash/Python Scripting</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> (Beginner, select 2)<br />
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> (Beginner)<br /> 
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12363?catalog_rank=%7B%22rank%22%3A8%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8908142" target="_new">Batch Pipelines in GCP</a> (Advanced)<br />
       </td>
     </tr>
     <tr>
       <td>04</td>
-      <td>2/22/2024</td>
+      <td>2/06/2024</td>
       <td>Consuming APIs</td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=s7wmiS2mSXY" target="_new">What is an API?</a> <br />
-        <img src="../images/book.png" /> <a href="https://www.dataquest.io/blog/python-api-tutorial/" target="_new">API Overview</a> <br />
-        <img src="../images/book.png" /> <a href="https://towardsdatascience.com/all-the-things-you-can-do-with-github-api-and-python-f01790fca131" target="_new">Github API + Data Science</a> <br />
-        <img src="../images/check.png" /> <a href="https://l.uvarc.io/json-overview" target="_new">JSON Overview</a> <br />
-        <img src="../images/lab.png" /> <a href="../labs/github-api.html">GitHub API</a> <br />
       </td>
     </tr>
     <tr>
       <td>06</td>
-      <td>3/8/2024</td>
+      <td>02/13/2024</td>
       <td>Containers: Running & Using</td>
       <td>
-        <img src="../images/book.png" /> <a href="https://docs.docker.com/get-started/overview/" target="_new">Docker Overview</a> <br />
-        <img src="../images/book.png" /> <a href="https://towardsdatascience.com/docker-for-data-science-a-step-by-step-guide-1e5f7f3baf8e" target="_new">Docker for Data Science</a> <br />
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=HMxDaM3-c1U&list=PLxBq1F-c5mHoxRNeguX7EUeYNrpMpm9p-&index=7" target="_new">Docker Basics</a> <br />
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=axKZpNfQXmg" target="_new">Container Workflows</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.katacoda.com/courses/docker" target="_new">Katacoda Docker</a> (Select 3)<br />
       </td>
     </tr>
     <tr>
       <td>07</td>
-      <td>3/15/2024</td>
+      <td>02/20/2024</td>
       <td>Containers: Building & Deploying</td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=7-7p6WuDtbs" target="_new">Containerizing ML</a> <br />
-        <img src="../images/book.png" /> <a href="https://towardsdatascience.com/digging-into-data-science-tools-docker-bbb9f3579c87" target="_new">Data Science Tools</a> <br />
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/blogs/aws/lightsail-containers-an-easy-way-to-run-your-containers-in-the-cloud/" target="_new">Publish a Container to Lightsail</a> <br />
       </td>
     </tr>
     <tr>
@@ -131,9 +99,6 @@
       <td>3/22/2024</td>
       <td>SQL & Relational Database Services</td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
-        <img src="../images/check.png" /> <a href="../assets/MySQL-Cheat-Sheet.pdf" target="_new">MySQL Cheat Sheet</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/16318?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=9315001" target="_new">AWS Relational Database Service</a>
       </td>
     </tr>
     <tr>
@@ -141,9 +106,6 @@
       <td>3/29/2024</td>
       <td>SQL & Relational Database Services</td>
       <td>
-        <img src="../images/book.png" /> <a href="../assets/learning-mysql.pdf" target="_new">Learning MySQL</a> <br />
-        <img src="../images/book.png" /> <a href="https://data-notes.co/relational-database-101-a8ace25c12a" target="_new">Relational Databases & Big Data</a> <br />
-        <img src="../images/check.png" /> <a href="../lectures/09-relational-databases.html#exercises">Relational Database</a>
       </td>
     </tr>
     <tr>
@@ -157,9 +119,6 @@
       <td>4/12/2024</td>
       <td>NoSQL & Unstructured Data</td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=uD3p_rZPBUQ" target="_new">Intro to NoSQL</a> <br />
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE" target="_new">MongoDB in 30 Minutes</a> <br />
-        <img src="../images/lab.png" /> <a href="https://github.com/ds2002/course/blob/main/practice/12-nosql-database/mongodb.md" target="_new">Hands-On MongoDB</a>
       </td>
     </tr>
     <tr>
@@ -167,9 +126,6 @@
       <td>4/19/2024</td>
       <td>NoSQL Database Services</td>
       <td>
-        <img src="../images/check.png" /> <a href="https://nmagee.github.io/ds2002/lectures/12-nosql-datasci.html#exercise" target="_new">MongoDB Data Ingestion</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/579?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646398" target="_new">GCP BigTable</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a> <br />
       </td>
     </tr>
     <tr>
@@ -177,9 +133,6 @@
       <td>4/26/2024</td>
       <td>Cloud Solutions</td>
       <td>
-        <img src="../images/lab.png" /> <a href="" target="_new">ML Quests (select)</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15698?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744616" target="_new">Serverless Text-to-Speech</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12762?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744166" target="_new">Serverless + Event-driven</a> <br />
       </td>
     </tr>
     <tr>
