--- a/schedule/index.html
+++ b/schedule/index.html
@@ -96,48 +96,67 @@
     </tr>
     <tr>
       <td>08</td>
-      <td>3/22/2024</td>
+      <td>02/27/2024</td>
       <td>SQL & Relational Database Services</td>
       <td>
       </td>
     </tr>
     <tr>
+      <td></td>
+      <td>03/05/2024</td>
+      <td>No Class - Spring Break</td>
+      <td>
+      </td>
+    </tr>
+    <tr>
       <td>09</td>
-      <td>3/29/2024</td>
+      <td>03/12/2024</td>
       <td>SQL & Relational Database Services</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>10</td>
-      <td>4/5/2024</td>
+      <td>03/19/2024</td>
       <td><i>Catch-Up</i></td>
       <td></td>
     </tr>
     <tr>
       <td>11</td>
-      <td>4/12/2024</td>
+      <td>03/26/2024</td>
       <td>NoSQL & Unstructured Data</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>12</td>
-      <td>4/19/2024</td>
+      <td>04/02/2024</td>
       <td>NoSQL Database Services</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>13</td>
-      <td>4/26/2024</td>
+      <td>04/09/2024</td>
       <td>Cloud Solutions</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>14</td>
-      <td>5/3/2024</td>
+      <td>04/16/2024</td>
+      <td>tbd</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>15</td>
+      <td>04/23/2024</td>
+      <td>tbd</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>16</td>
+      <td>04/30/2024</td>
       <td>Wrapping Up</td>
       <td> </td>
     </tr>
