--- a/schedule/index.html
+++ b/schedule/index.html
@@ -76,7 +76,7 @@
     <tr>
       <td>04</td>
       <td>2/06/2024</td>
-      <td>Consuming APIs</td>
+      <td>tbd</td>
       <td>
       </td>
     </tr>
@@ -118,7 +118,7 @@
     <tr>
       <td>10</td>
       <td>03/19/2024</td>
-      <td><i>Catch-Up</i></td>
+      <td>tbd</td>
       <td></td>
     </tr>
     <tr>
