--- a/schedule/index.html
+++ b/schedule/index.html
@@ -62,42 +62,42 @@
     <tr>
       <td>02</td>
       <td>01/23/2024</td>
-      <td>Data: Storage & Management</td>
+      <td>Environments: The command-line and filesystem</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>03</td>
       <td>01/30/2024</td>
-      <td>Data: Scripting, Pipelines, and Automation</td>
+      <td>Environments: Git</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>04</td>
       <td>2/06/2024</td>
-      <td>tbd</td>
+      <td>Environments: Scripting</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>06</td>
       <td>02/13/2024</td>
-      <td>Containers: Running & Using</td>
+      <td>Environments: Storage</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>07</td>
       <td>02/20/2024</td>
-      <td>Containers: Building & Deploying</td>
+      <td>Creating & Managing Compute Resources</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>08</td>
       <td>02/27/2024</td>
-      <td>SQL & Relational Database Services</td>
+      <td>Cloud Services</td>
       <td>
       </td>
     </tr>
@@ -111,53 +111,53 @@
     <tr>
       <td>09</td>
       <td>03/12/2024</td>
-      <td>SQL & Relational Database Services</td>
+      <td>Containers</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>10</td>
       <td>03/19/2024</td>
-      <td>tbd</td>
+      <td>SQL & Relational Databases</td>
       <td></td>
     </tr>
     <tr>
       <td>11</td>
       <td>03/26/2024</td>
-      <td>NoSQL & Unstructured Data</td>
+      <td>SQL & Relational Databases</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>12</td>
       <td>04/02/2024</td>
-      <td>NoSQL Database Services</td>
+      <td>NoSQL Databases</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>13</td>
       <td>04/09/2024</td>
-      <td>Cloud Solutions</td>
+      <td>Scaling & Big Data</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>14</td>
       <td>04/16/2024</td>
-      <td>tbd</td>
+      <td>Jobs & Automation</td>
       <td> </td>
     </tr>
     <tr>
       <td>15</td>
       <td>04/23/2024</td>
-      <td>tbd</td>
+      <td>Jobs & Automation</td>
       <td> </td>
     </tr>
     <tr>
       <td>16</td>
       <td>04/30/2024</td>
-      <td>Wrapping Up</td>
+      <td>Course Wrap-Up</td>
       <td> </td>
     </tr>
   </tbody>
