Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -76,28 +76,28 @@
     <tr>
       <td>04</td>
       <td>2/06/2024</td>
-      <td>Environments: Scripting</td>
+      <td>Environments: Scripting & pipelines</td>
+      <td>
+      </td>
+    </tr>
+    <tr>
+      <td>05</td>
+      <td>02/13/2024</td>
+      <td>Storage</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>06</td>
-      <td>02/13/2024</td>
-      <td>Environments: Storage</td>
+      <td>02/20/2024</td>
+      <td>Compute: Create & manage resources</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>07</td>
-      <td>02/20/2024</td>
-      <td>Creating & Managing Compute Resources</td>
-      <td>
-      </td>
-    </tr>
-    <tr>
-      <td>08</td>
       <td>02/27/2024</td>
-      <td>Cloud Services</td>
+      <td>Compute: Create resources in the cloud</td>
       <td>
       </td>
     </tr>
@@ -109,53 +109,53 @@
       </td>
     </tr>
     <tr>
-      <td>09</td>
+      <td>08</td>
       <td>03/12/2024</td>
-      <td>Containers</td>
+      <td>Compute: Isolate environments using containers</td>
       <td>
       </td>
     </tr>
     <tr>
-      <td>10</td>
+      <td>09</td>
       <td>03/19/2024</td>
-      <td>SQL & Relational Databases</td>
+      <td>Databases: SQL & Relational</td>
       <td></td>
     </tr>
     <tr>
-      <td>11</td>
+      <td>10</td>
       <td>03/26/2024</td>
-      <td>SQL & Relational Databases</td>
+      <td>Databases: SQL & Relational</td>
+      <td>
+      </td>
+    </tr>
+    <tr>
+      <td>11</td>
+      <td>04/02/2024</td>
+      <td>Databases: NoSQL & Unstructured Data</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>12</td>
-      <td>04/02/2024</td>
-      <td>NoSQL Databases</td>
+      <td>04/09/2024</td>
+      <td>Data Pipelines: Scaling & Big Data</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>13</td>
-      <td>04/09/2024</td>
-      <td>Scaling & Big Data</td>
-      <td>
-      </td>
+      <td>04/16/2024</td>
+      <td>Data Pipelines: Jobs</td>
+      <td> </td>
     </tr>
     <tr>
       <td>14</td>
-      <td>04/16/2024</td>
-      <td>Jobs & Automation</td>
+      <td>04/23/2024</td>
+      <td>Data Pipelines: Automation</td>
       <td> </td>
     </tr>
     <tr>
       <td>15</td>
-      <td>04/23/2024</td>
-      <td>Jobs & Automation</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>16</td>
       <td>04/30/2024</td>
       <td>Course Wrap-Up</td>
       <td> </td>
