Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -62,8 +62,10 @@
     <tr>
       <td>02</td>
       <td>01/23/2024</td>
-      <td>Environments: The command-line and filesystem</td>
+      <td>Environments: The Linux command line and filesystem</td>
       <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=8I0GAGJEx4c" target="_new">A Brief History of UNIX</a> <br />
+        <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/efficient-linux-at/9781098113391/" target="_new">Efficient Linux at the Command Line</a> <br />
       </td>
     </tr>
     <tr>
@@ -71,6 +73,7 @@
       <td>01/30/2024</td>
       <td>Environments: Git</td>
       <td>
+        <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/learning-git/9781098133900/" target="_new">Learning Git</a> <br />
       </td>
     </tr>
     <tr>
@@ -118,8 +121,10 @@
     <tr>
       <td>09</td>
       <td>03/19/2024</td>
-      <td>Databases: SQL & Relational</td>
-      <td></td>
+      <td>Databases: Managing Data</td>
+      <td>
+        <img src="../images/book.png" /> <a href="../assets/data-science-data-management.pdf" target="_new">Data Management</a> <br />
+      </td>
     </tr>
     <tr>
       <td>10</td>
