Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -116,6 +116,7 @@
       <td>03/12/2024</td>
       <td>Compute: Isolate environments using containers</td>
       <td>
+        <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/docker-up/9781098131814/" target="_new">Docker: Up & Running</a> <br />
       </td>
     </tr>
     <tr>
