Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -86,21 +86,21 @@
     <tr>
       <td>05</td>
       <td>02/13/2024</td>
-      <td>Storage</td>
+      <td>Infrastructure: Storage</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>06</td>
       <td>02/20/2024</td>
-      <td>Compute: Create & manage resources</td>
+      <td>Infrastructure: Create & manage compute resources</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>07</td>
       <td>02/27/2024</td>
-      <td>Compute: Create resources in the cloud</td>
+      <td>Infrastructure: Consume services in the cloud</td>
       <td>
       </td>
     </tr>
@@ -114,7 +114,7 @@
     <tr>
       <td>08</td>
       <td>03/12/2024</td>
-      <td>Compute: Isolate environments using containers</td>
+      <td>Infrastructure: Isolate environments using containers</td>
       <td>
         <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/docker-up/9781098131814/" target="_new">Docker: Up & Running</a> <br />
       </td>
