Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -93,14 +93,14 @@
     <tr>
       <td>06</td>
       <td>02/20/2024</td>
-      <td>Infrastructure: Create & manage compute resources</td>
+      <td>Infrastructure: Manage your compute resources</td>
       <td>
       </td>
     </tr>
     <tr>
       <td>07</td>
       <td>02/27/2024</td>
-      <td>Infrastructure: Consume services in the cloud</td>
+      <td>Infrastructure: Create resources in the cloud</td>
       <td>
       </td>
     </tr>
