Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -107,7 +107,7 @@
     <tr>
       <td></td>
       <td>03/05/2024</td>
-      <td>No Class - Spring Break</td>
+      <td><b>No Class - Spring Break</b></td>
       <td>
       </td>
     </tr>
