Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -71,7 +71,7 @@
     <tr>
       <td>03</td>
       <td>01/30/2024</td>
-      <td>Environments: Git</td>
+      <td>Environments: Git & GitHub</td>
       <td>
         <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/learning-git/9781098133900/" target="_new">Learning Git</a> <br />
       </td>
@@ -114,7 +114,7 @@
     <tr>
       <td>08</td>
       <td>03/12/2024</td>
-      <td>Infrastructure: Isolate environments using containers</td>
+      <td>Software Deployment: Isolate environments using containers</td>
       <td>
         <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/docker-up/9781098131814/" target="_new">Docker: Up & Running</a> <br />
       </td>
