--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
     <tr>
       <td><a href="https://canvas.its.virginia.edu/courses/105117/assignments" target="_new">Labs</a></td>
       <td>10%</td>
-      <td>Complete all required labs.</td>
+      <td>Complete 10 required labs.</td>
     </tr>
     <tr>
       <td>Quizzes</td>
       <td>40%</td>
-      <td>5 quizzes / 8 points each</td>
+      <td>4 quizzes / 10 points each</td>
     </tr>
     <tr>
       <td>Data Projects</td>
