Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -74,6 +74,7 @@
       <td>Environments: Git & GitHub</td>
       <td>
         <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/learning-git/9781098133900/" target="_new">Learning Git</a> <br />
+        <img src="../images/lab.png" /> Lab: Using Git <br />
       </td>
     </tr>
     <tr>
