Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -66,6 +66,7 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=8I0GAGJEx4c" target="_new">A Brief History of UNIX</a> <br />
         <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/efficient-linux-at/9781098113391/" target="_new">Efficient Linux at the Command Line</a> <br />
+        <img src="../images/lab.png" /> Lab: Working with the CLI <br />
       </td>
     </tr>
     <tr>
