Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -57,6 +57,7 @@
       <td>01/18/2024</td>
       <td>Course introduction: Data Engineering Basics</td>
       <td>
+        <img src="../images/book.png" /> <a href="https://medium.com/@rchang/a-beginners-guide-to-data-engineering-part-i-4227c5c457d7" target="_new">Data Engineering - Parts I/II/III</a> <br />
       </td>
     </tr>
     <tr>
