Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -91,6 +91,7 @@
       <td>02/13/2024</td>
       <td>Infrastructure: Storage</td>
       <td>
+        <img src="../images/lab.png" /> Lab: Using Amazon S3 <br />
       </td>
     </tr>
     <tr>
@@ -105,6 +106,7 @@
       <td>02/27/2024</td>
       <td>Infrastructure: Create resources in the cloud</td>
       <td>
+        <img src="../images/lab.png" /> Lab: Bootstrap and Amazon EC2 Instance <br />
       </td>
     </tr>
     <tr>
