Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -122,6 +122,7 @@
       <td>Software Deployment: Isolate environments using containers</td>
       <td>
         <img src="../images/book.png" /> <a href="https://learning.oreilly.com/library/view/docker-up/9781098131814/" target="_new">Docker: Up & Running</a> <br />
+        <img src="../images/lab.png" /> Lab: Build your first Docker container <br />
       </td>
     </tr>
     <tr>
@@ -137,6 +138,7 @@
       <td>03/26/2024</td>
       <td>Databases: SQL & Relational</td>
       <td>
+        <img src="../images/lab.png" /> Lab: Basic CRUD Operations using SQL <br />
       </td>
     </tr>
     <tr>
@@ -144,6 +146,7 @@
       <td>04/02/2024</td>
       <td>Databases: NoSQL & Unstructured Data</td>
       <td>
+        <img src="../images/lab.png" /> Lab: Work with MongoDB Atlas <br />
       </td>
     </tr>
     <tr>
@@ -151,13 +154,16 @@
       <td>04/09/2024</td>
       <td>Data Pipelines: Scaling & Big Data</td>
       <td>
+        <img src="../images/lab.png" /> Lab: Horizontal and Vertical Scaling <br />
       </td>
     </tr>
     <tr>
       <td>13</td>
       <td>04/16/2024</td>
       <td>Data Pipelines: Jobs</td>
-      <td> </td>
+      <td>
+        <img src="../images/lab.png" /> Lab: Run a Job in Kubernetes <br />
+      </td>
     </tr>
     <tr>
       <td>14</td>
