Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -106,7 +106,7 @@
       <td>02/27/2024</td>
       <td>Infrastructure: Create resources in the cloud</td>
       <td>
-        <img src="../images/lab.png" /> Lab: Bootstrap and Amazon EC2 Instance <br />
+        <img src="../images/lab.png" /> Lab: Bootstrap an EC2 Instance <br />
       </td>
     </tr>
     <tr>
