--- a/schedule/index.html
+++ b/schedule/index.html
@@ -87,6 +87,13 @@
       </td>
     </tr>
     <tr>
+      <td></td>
+      <td>2/06/2024</td>
+      <td>Quiz 1: Environments</td>
+      <td>
+      </td>
+    </tr>
+    <tr>
       <td>05</td>
       <td>02/13/2024</td>
       <td>Infrastructure: Storage</td>
