--- a/schedule/index.html
+++ b/schedule/index.html
@@ -81,15 +81,15 @@
     </tr>
     <tr>
       <td>04</td>
-      <td>2/06/2024</td>
+      <td>02/06/2024</td>
       <td>Environments: Scripting & pipelines</td>
       <td>
       </td>
     </tr>
     <tr>
       <td></td>
-      <td>2/06/2024</td>
-      <td>Quiz 1: Environments</td>
+      <td></td>
+      <td><b>Quiz 1: Environments</b></td>
       <td>
       </td>
     </tr>
@@ -133,6 +133,13 @@
       </td>
     </tr>
     <tr>
+      <td></td>
+      <td></td>
+      <td><b>Quiz 2: Infrastructure</b></td>
+      <td>
+      </td>
+    </tr>
+    <tr>
       <td>09</td>
       <td>03/19/2024</td>
       <td>Databases: Managing Data</td>
@@ -157,6 +164,13 @@
       </td>
     </tr>
     <tr>
+      <td></td>
+      <td></td>
+      <td><b>Quiz 3: Databases</b></td>
+      <td>
+      </td>
+    </tr>
+    <tr>
       <td>12</td>
       <td>04/09/2024</td>
       <td>Data Pipelines: Scaling & Big Data</td>
@@ -177,6 +191,13 @@
       <td>04/23/2024</td>
       <td>Data Pipelines: Automation</td>
       <td> </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td><b>Quiz 4: Data Pipelines</b></td>
+      <td>
+      </td>
     </tr>
     <tr>
       <td>15</td>
