Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -190,7 +190,10 @@
       <td>14</td>
       <td>04/23/2024</td>
       <td>Data Pipelines: Automation</td>
-      <td> </td>
+      <td>
+        <img src="../images/lab.png" /> Lab: Create a Serverless Workflow <br />
+
+      </td>
     </tr>
     <tr>
       <td></td>
