Smoothing the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="https://nmagee.github.io/ds2002/">Return to the<strong>Syllabus</strong></a></li>
           <li><a href="https://canvas.its.virginia.edu/courses/105117" target="_new">Course LMS<strong>Canvas</strong></a></li>
-          <li><a href="https://github.com/nmagee/ds2002/" target="_new">Course Code<strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/nmagee/ds2002-course/" target="_new">Course Code<strong>GitHub</strong></a></li>
         </ul>
         <ul>
           <li><a href="https://canvas.its.virginia.edu/courses/105117/assignments" target="_new">Full list of <strong>Labs</strong></a></li>
